snapshots/repository/renamed.snap
---
source: src/events/repository.rs
info:
  author_name_length: 8
  colour_hex: "#F9E2AF"
  description_length: 0
  title_length: 71
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 16376495
    description: ~
    title: "[catppuccin-rfc/renamed-1] Repository renamed from renamed to renamed-1"
    url: "https://github.com/catppuccin-rfc/renamed-1"
